2023-06-18 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCgenconstprop.cc,
	  src/z80/gen.c,
	  src/pdk/gen.c,
	  src/stm8/gen.c:
	  Use information from generalized constant propagation analysis in code generation.

2023-06-15 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCBBlock.c,
	  src/SDCCcse.c,
	  src/SDCCdflow.c,
	  src/SDCClrange.c,
	  src/SDCCopt.c,
	  src/SDCCralloc.hpp,
	  src/*/ralloc.c,
	  src/*/ralloc2.cc:
	  Simplify based on IC_(JT)COND now being an alias for IC_LEFT.

2023-06-15 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCdflow.h,
	  src/SDCCgenconstprop.cc,
	  src/SDCCopt.c,
	  src/z80/gen.c,
	  src/z80/gen.h,
	  src/z80/ralloc2.cc,
	  src/stm8/gen.c,
	  src/stm8/gen.h,
	  src/stm8/ralloc2.cc:
	  Basic generalized constant propgation analysis and optimization for individual operand bits.

2023-06-13 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCgenconstprop.cc:
	  Fixes and improvements for generalized constant propagation optimization and analysis.

2023-06-13 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/mos6502/gen.c
	  Fix negation of literals for mos6502.
	* src/SDCCgenconstprop.cc:
	  Fix handling of __bit in generalized constant propagation analysis.

2023-06-12 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCopt.c:
	  Fix an issue in handling parameters during conversion of builtin functions at the beginning of a basic block.

2023-06-12 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCBBlock.c,
	  src/SDCCglobl.h,
	  src/SDCCopt.c:
	  Dump iCode after generalized constant propagation.

2023-06-12 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCClrange.c:
	  Fix a corner case in live-range separation that would hang SDCC on compiling the pic14 library (and result in some missed optimizations for other ports).
	* src/pdk/gen.c:
	  Fix a pdk codegen issue that could result in invalid asm for pdk13 on bitwise and in if condition.
	* src/SDCCopt.c: